--- a/employee-management-system/package.json
+++ b/employee-management-system/package.json
@@ -7,8 +7,11 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "date-fns": "^2.28.0",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
+    "react-big-calendar": "^1.4.2",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
