--- a/employee-management-system/package.json
+++ b/employee-management-system/package.json
@@ -10,7 +10,11 @@
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-select": "^5.4.0",
+    "styled-components": "^5.3.5",
     "sweetalert2": "^11.4.6",
     "web-vitals": "^2.1.4"
   },
